socializer_admin/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: socializer-admin
  name: socializer-admin-app
spec:
  selector:
    matchLabels:
      app: socializer-admin-app
  replicas: 2
  template:
    metadata:
      labels:
        app: socializer-admin-app
    spec:
      containers:
        - name: socializer-admin-app
          image: registry.digitalocean.com/socialzer/socializer_admin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7070
              name: s-admin-port
      imagePullSecrets:
        - name: registry-socialzer
